--- a/css/browser.css
+++ b/css/browser.css
@@ -10,7 +10,7 @@
 
 #serverlist {
     position: absolute;
-    top: 5px;
+    top: 35px;
     bottom: 0;
     left: 5px;
     right: 1px;
@@ -24,3 +24,33 @@
     right: 0;
     width: 27%;
 }
+
+.gameCard{
+    opacity: 0.8;
+    padding: 8;
+    padding-bottom: 10;
+    background-color:white;
+}
+   
+.serverTable{
+    opacity: 0.8;
+    padding: 5;
+    background-color:white;
+}
+
+.browserTitle{
+    opacity: 0.8;
+    position: absolute;
+    top: 1;
+    left: 75;
+    color: white;
+}
+
+#logo{
+position: absolute;
+top: 10;
+left: 10;
+    opacity: 0.8;
+    width: 58px;
+    height: 50px;
+    }
