Made a few tweaks to blend better in-game
Need to math the css offsets, this currently only lines up correctly on
1080p

--- a/css/browser.css
+++ b/css/browser.css
@@ -1,7 +1,7 @@
 #bg {
   position: fixed; 
-  top: 0; 
-  left: 0; 
+  top: -76px; 
+  left: -135px; 
     
   /* Preserve aspect ratio */
   min-width: 100%;
