--- a/css/browser.css
+++ b/css/browser.css
@@ -32,6 +32,7 @@
 .gameCard{
     opacity: 0.8;
     padding: 20;
+    padding-bottom: 30;
     margin-right: -15;
     color: white;
     background-image: url("../images/gamecard.png");
