--- a/css/browser.css
+++ b/css/browser.css
@@ -57,6 +57,11 @@
     top: 6;
     left: 90;
     color: white;
+    text-shadow:
+    -3px -3px 0 #1a3d5a,
+    3px -3px 0 #1a3d5a,
+    -3px 3px 0 #1a3d5a,
+    3px 3px 0 #1a3d5a;  
 }
 #logo{
     position: absolute;
@@ -92,6 +97,11 @@
     top: 23;
     left: 600;
     color: white;
+    text-shadow:
+    -3px -3px 0 #1a3d5a,
+    3px -3px 0 #1a3d5a,
+    -3px 3px 0 #1a3d5a,
+    3px 3px 0 #1a3d5a; 
 }
 .statBreakdown{
     background: black;
