--- a/css/browser.css
+++ b/css/browser.css
@@ -44,6 +44,16 @@
     padding-top: 10;
     padding-left: 10;
     padding-right: 0;
+    padding-bottom: 5;
+}
+.gameCard ul{
+    list-style-type: none;
+    padding-left:0;
+    font-size: 1.17em;
+    margin-bottom: 5;
+}
+.gamecard h3{
+    margin:0;
 }
 .serverTable{
     opacity: 0.7;
@@ -56,12 +66,6 @@
     position: absolute;
     top: 6;
     left: 90;
-    color: white;
-    text-shadow:
-    -3px -3px 0 #1a3d5a,
-    3px -3px 0 #1a3d5a,
-    -3px 3px 0 #1a3d5a,
-    3px 3px 0 #1a3d5a;  
 }
 #logo{
     position: absolute;
@@ -96,12 +100,6 @@
     position: absolute;
     top: 23;
     left: 600;
-    color: white;
-    text-shadow:
-    -3px -3px 0 #1a3d5a,
-    3px -3px 0 #1a3d5a,
-    -3px 3px 0 #1a3d5a,
-    3px 3px 0 #1a3d5a; 
 }
 .statBreakdown{
     background: black;
@@ -119,17 +117,25 @@ body{
     cursor: url('../images/cursor.png'), default;
 }
 a {
-    color: white;
-}
-a:hover {
-    color: white;
-}
-a:visited {
-    color: white;
+    color: white !important;
 }
 .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-  background-color: #1a3d5a;
+    background-color: #1a3d5a;
 }
 .tableHeader{
-  background-color: #1a3d5a;
+    background-color: #1a3d5a;
+}
+button:focus { 
+    outline:0 !important; 
+}
+.whiteBlueOutline {
+    color: white;
+    text-shadow:
+    -3px -3px 0 #1a3d5a,
+    3px -3px 0 #1a3d5a,
+    -3px 3px 0 #1a3d5a,
+    3px 3px 0 #1a3d5a;  
+}
+.heading {
+    color: #1a3d5a; 
 }
