--- a/css/browser.css
+++ b/css/browser.css
@@ -32,8 +32,9 @@
 .gameCard{
     opacity: 0.8;
     padding: 20;
+    padding-left: 27;
     padding-bottom: 30;
-    margin-right: -15;
+    margin-right: -16;
     color: white;
     background-image: url("../images/gamecard.png");
     background-size: cover;
@@ -41,16 +42,15 @@
     background-position: 0px 0px;
 }
 .gameCard img{
-    padding-top: 10;
-    padding-left: 10;
-    padding-right: 0;
-    padding-bottom: 5;
+    padding-top: 15;
+    padding-right: -5;
+    padding-bottom: 10;
 }
 .gameCard ul{
     list-style-type: none;
     padding-left:0;
     font-size: 1.17em;
-    margin-bottom: 5;
+    margin: 0;
 }
 .gamecard h3{
     margin:0;
@@ -102,6 +102,7 @@
     left: 600;
 }
 .statBreakdown{
+    margin-top: 10;
     background: black;
     color:white;
 }
@@ -139,3 +140,7 @@ button:focus {
 .heading {
     color: #1a3d5a; 
 }
+.version {
+    float: right;
+}
+img{-webkit-user-drag: none;}
