--- a/css/browser.css
+++ b/css/browser.css
@@ -62,6 +62,7 @@
     background: black;
 }
 .browserTitle{
+    color: white;
     opacity: 0.9;
     position: absolute;
     top: 6;
@@ -95,6 +96,7 @@
     background-position: center; 
 }
 .serverStats {
+    color: white;
 	font-weight: bold;
     opacity: 0.8;
     position: absolute;
@@ -105,6 +107,13 @@
     margin-top: 10;
     background: black;
     color:white;
+}
+.statLines{
+    border-style: solid;
+    border-bottom: 0;
+    border-top: 1px solid white;
+    border-left: 0;
+    border-right: 0;
 }
 #connectionStatus{
 	opacity: 0.8;
@@ -119,6 +128,9 @@
 	z-index:1000;
 	padding-right: 10;
 	padding-bottom: 4;
+}
+#setBrowser:a{
+    font-weight: normal;
 }
 body{
     background-color: black;
@@ -135,14 +147,6 @@ a {
 }
 button:focus { 
     outline:0 !important; 
-}
-.whiteBlueOutline {
-    color: white;
-    text-shadow:
-    -3px -3px 0 #1a3d5a,
-    3px -3px 0 #1a3d5a,
-    -3px 3px 0 #1a3d5a,
-    3px 3px 0 #1a3d5a;  
 }
 .heading {
     color: #1a3d5a; 
