--- a/css/browser.css
+++ b/css/browser.css
@@ -165,3 +165,54 @@ img{
     -webkit-border-radius: 3px;
     background: black url(../images/scrollbar_thumb_bg.png) no-repeat center;
 }
+#modalContainer {
+	background-color:rgba(0, 0, 0, 0.3);
+	position:absolute;
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	z-index:10000;
+}
+#alertBox {
+	position:relative;
+	width:300px;
+	min-height:100px;
+	margin-top:50px;
+	border:1px solid #1a3d5a;
+	background-color:black;
+	background-repeat:no-repeat;
+	background-position:20px 30px;
+}
+#modalContainer > #alertBox {
+	position:fixed;
+}
+#alertBox h1 {
+	margin:0;
+	font:bold 0.9em verdana,arial;
+	background-color:#1a3d5a;
+	color:#FFF;
+	border-bottom:1px solid white;
+	padding:2px 0 2px 5px;
+}
+#alertBox p {
+	font:1em verdana,arial;
+	line-height: 50px;
+	vertical-align: middle;
+	text-align: center;
+	height:50px;
+	color: white;
+}
+#alertBox #closeBtn {
+	display:block;
+	position:relative;
+	margin:5px auto;
+	padding:7px;
+	border:1px solid white;
+	width:70px;
+	font:0.7em verdana,arial;
+	text-transform:uppercase;
+	text-align:center;
+	color:#FFF;
+	background-color:#1a3d5a;
+}
