--- a/css/browser.css
+++ b/css/browser.css
@@ -166,13 +166,14 @@ img{
     background: black url(../images/scrollbar_thumb_bg.png) no-repeat center;
 }
 #modalContainer {
-	background-color:rgba(0, 0, 0, 0.3);
+	background-color: #2C3539;
 	position:absolute;
 	width:100%;
 	height:100%;
 	top:0px;
 	left:0px;
 	z-index:10000;
+	opacity: 0.8;
 }
 #alertBox {
 	position:relative;
@@ -189,14 +190,15 @@ img{
 }
 #alertBox h1 {
 	margin:0;
-	font:bold 0.9em verdana,arial;
+	font-size:0.9em;
+	font-weight: bold;
 	background-color:#1a3d5a;
 	color:#FFF;
 	border-bottom:1px solid white;
-	padding:2px 0 2px 5px;
+	padding:4px 0 4px 5px;
 }
 #alertBox p {
-	font:1em verdana,arial;
+    font-size: 1.17em;
 	line-height: 50px;
 	vertical-align: middle;
 	text-align: center;
@@ -210,9 +212,13 @@ img{
 	padding:7px;
 	border:1px solid white;
 	width:70px;
-	font:0.7em verdana,arial;
-	text-transform:uppercase;
+	font-size:0.7em;
+	font-weight: bold;
 	text-align:center;
 	color:#FFF;
+	background-color:black;
+    text-decoration: none;
+}
+#alertBox #closeBtn:hover {
 	background-color:#1a3d5a;
 }
