--- a/css/browser.css
+++ b/css/browser.css
@@ -159,26 +159,25 @@ img{
     display: none;
 }
 ::-webkit-scrollbar-track-piece  {
-    background-color: #1a3d5a;
+    background-color: black;
 } 
 ::-webkit-scrollbar-thumb:vertical {
     -webkit-border-radius: 3px;
-    background: black url(../images/scrollbar_thumb_bg.png) no-repeat center;
+    background: grey url(../images/scrollbar_thumb_bg.png) no-repeat center;
 }
 #modalContainer {
-	background-color: #2C3539;
-	position:absolute;
+	background-color:rgba(0, 0, 0, 0.8);
+	position:fixed;
 	width:100%;
 	height:100%;
 	top:0px;
 	left:0px;
 	z-index:10000;
-	opacity: 0.8;
 }
 #alertBox {
 	position:relative;
 	width:300px;
-	min-height:100px;
+	min-height:150px;
 	margin-top:50px;
 	border:1px solid #1a3d5a;
 	background-color:black;
@@ -198,21 +197,22 @@ img{
 	padding:4px 0 4px 5px;
 }
 #alertBox p {
-    font-size: 1.17em;
-	line-height: 50px;
+    font-size: 1.25em;
+    font-weight: normal;
+	line-height: 70px;
 	vertical-align: middle;
 	text-align: center;
-	height:50px;
+	height:70px;
 	color: white;
 }
 #alertBox #closeBtn {
 	display:block;
 	position:relative;
 	margin:5px auto;
-	padding:7px;
+	padding:3px;
 	border:1px solid white;
-	width:70px;
-	font-size:0.7em;
+	width:80px;
+	font-size:1em;
 	font-weight: bold;
 	text-align:center;
 	color:#FFF;
