--- a/css/browser.css
+++ b/css/browser.css
@@ -25,13 +25,12 @@
 }
 #serverinfo {
     position: absolute;
-	top: 0;
+    top: 15px;
     bottom: 0;
     right: 15px;
     width: 26%;
 }
 .gameCard{
-    margin-top: 70px;
     opacity: 0.8;
     padding: 15;
     padding-bottom: 30;
@@ -97,7 +96,6 @@
     position: absolute;
     top: 19;
     left: 610;
-	z-level: 10;
 }
 .statBreakdown{
     margin-top: 10;
@@ -113,35 +111,15 @@
 }
 #connectionStatus{
 	opacity: 0.8;
-	position:fixed; top:12; right: 10;
-	height: 50;
-	width: 165;
+	position:fixed; bottom:20; right: 0;
 	z-index:1000;
-	text-align: left;
-	font-weight: bold;
-	padding-top: 5;
-	padding-left: 5;
-	background-color: black;
-	border: 1px solid #1a3d5a;
-}
-#closeButton{
-	opacity: 0.8;
-	position:fixed; top:0; right: 0;
-	z-index:1000;
-	padding: 5;
-    font-weight: bold;
-	font-size: 24px;
-	color: black;
-	text-align: center;
-	line-height: 1em;
-	vertical-align: middle;
-	width: 35;
-	height: 32;
-	background-color: red;
+	padding-right: 10;
+	padding-bottom: 5;
+    color: white;
 }
 #setBrowser{
 	opacity: 0.8;
-	position:fixed; bottom:0; right: 0;
+	position:fixed; bottom:5; right: 0;
 	z-index:1000;
 	padding-right: 10;
 	padding-bottom: 4;
@@ -177,12 +155,69 @@ img{
 }
 ::-webkit-scrollbar-button:start:decrement,
 ::-webkit-scrollbar-button:end:increment  {
-    //display: none;
+    display: none;
 }
 ::-webkit-scrollbar-track-piece  {
     background-color: black;
 } 
 ::-webkit-scrollbar-thumb:vertical {
     -webkit-border-radius: 3px;
-    background: #1a3d5a url(../images/scrollbar_thumb_bg.png) no-repeat center;
+    background: grey url(../images/scrollbar_thumb_bg.png) no-repeat center;
+}
+#modalContainer {
+	background-color:rgba(0, 0, 0, 0.8);
+	position:fixed;
+	width:100%;
+	height:100%;
+	top:0px;
+	left:0px;
+	z-index:10000;
+}
+#alertBox {
+	position:relative;
+	width:300px;
+	min-height:150px;
+	margin-top:50px;
+	border:1px solid #1a3d5a;
+	background-color:black;
+	background-repeat:no-repeat;
+	background-position:20px 30px;
+}
+#modalContainer > #alertBox {
+	position:fixed;
+}
+#alertBox h1 {
+	margin:0;
+	font-size:0.9em;
+	font-weight: bold;
+	background-color:#1a3d5a;
+	color:#FFF;
+	border-bottom:1px solid white;
+	padding:4px 0 4px 5px;
+}
+#alertBox p {
+    font-size: 1.25em;
+    font-weight: normal;
+	line-height: 70px;
+	vertical-align: middle;
+	text-align: center;
+	height:70px;
+	color: white;
+}
+#alertBox #closeBtn {
+	display:block;
+	position:relative;
+	margin:5px auto;
+	padding:3px;
+	border:1px solid white;
+	width:80px;
+	font-size:1em;
+	font-weight: bold;
+	text-align:center;
+	color:#FFF;
+	background-color:black;
+    text-decoration: none;
+}
+#alertBox #closeBtn:hover {
+	background-color:#1a3d5a;
 }
