--- a/css/browser.css
+++ b/css/browser.css
@@ -124,6 +124,23 @@
 	padding-bottom: 7;
     color: white;
 }
+#gamepadPrompt{
+	opacity: 0.8;
+	position:fixed; top:0; right: 0;
+	z-index:1000;
+	padding-right: 8;
+	padding-top: 7;
+    color: white;
+}
+#gamepadDisplay{
+	opacity: 0.8;
+	position:fixed; top:0; right: 0;
+	z-index:1000;
+	padding-right: 20;
+	padding-top: 20;
+    color: white;
+    background-color: black;
+}
 #setBrowser{
 	opacity: 0.8;
 	position:fixed; bottom:17; right: 0;
@@ -179,4 +196,13 @@ html {
 }
 button {
     cursor: url('../images/cursor.png'), default;
+}
+.selected{
+    background-color: #1a3d5a;
+}
+.controllerButton{
+    margin-left: 5;
+    height: 25;
+    width: 25;
+    display: none;
 }
