Only show A/X on selected
Make it so hitting any button to enable controller support doesn't
accidently trigger anything.

TODO: use that back button icon to let the user know the back button
closes the browser.

--- a/css/browser.css
+++ b/css/browser.css
@@ -200,7 +200,15 @@ button {
 .selected{
     background-color: #1a3d5a;
 }
+.selected .controllerButton{
+    opacity: 1;
+}
+.refresh .controllerButton{
+    opacity: 1;
+}
+
 .controllerButton{
+    opacity: 0;
     margin-left: 5;
     height: 25;
     width: 25;
