--- a/css/browser.css
+++ b/css/browser.css
@@ -31,6 +31,7 @@
 }
 .gameCard{
     opacity: 0.8;
+    margin-top: 54;
     padding: 15;
     margin-right: 0;
     padding-bottom: 30;
@@ -81,12 +82,29 @@
     color: white;
     font-weight: bold;
     background-color: black;
-    width: 125px;
+    width: 115px;
     height: 30px;
     border-style: solid;
     border: 1px solid white;
 }
 .refresh:hover{
+    background-color: #1a3d5a;
+}
+.closeButton {
+    opacity: 0.8;
+    position: absolute;
+    top: 23;
+    right: 0;
+    color: white;
+    font-weight: bold;
+    background-color: black;
+    width: 95px;
+    height: 30px;
+    border-style: solid;
+    border: 1px solid white;
+    display: none;
+}
+.closeButton:hover{
     background-color: #1a3d5a;
 }
 .serverStats {
@@ -197,6 +215,9 @@ button {
     opacity: 1;
 }
 .refresh .controllerButton{
+    opacity: 1;
+}
+.closeButton .controllerButton{
     opacity: 1;
 }
 .controllerButton{
