--- a/css/browser.css
+++ b/css/browser.css
@@ -3,10 +3,6 @@
     /* Preserve aspect ratio */
     min-width: 100%;
     min-height: 100%;
-    @media (max-width: 1919px) { 
-        top: -8.25%;
-        left: -8.25%;
-    }
 }
 #overlay {
     position: fixed;
@@ -27,8 +23,8 @@
     position: absolute;
     top: 15px;
     bottom: 0;
-    right: 2;
-    width: 27.5%;
+    right: 15;
+    width: 27%;
 }
 .gameCard{
     opacity: 0.8;
@@ -42,8 +38,9 @@
     border: 3px solid #1a3d5a;
 }
 .gameCard img{
-    padding-right: 10;
     padding-bottom: 10;
+    margin-left: auto;
+    margin-right: auto;
 }
 .gameCard ul{
     list-style-type: none;
@@ -170,26 +167,8 @@ a {
 img{
     -webkit-user-drag: none;
 }
-@media (max-width: 1900px) { 
-    ::-webkit-scrollbar {
-        width: 18px;
-        height: 10px;
-    }
-    ::-webkit-scrollbar-button:start:decrement,
-    ::-webkit-scrollbar-button:end:increment  {
-        display: none;
-    }
-    ::-webkit-scrollbar-track-piece  {
-        background-color: rgba(37,37,37,0.8);
-        border: 5px solid #1a3d5a;
-        border-left: 0;
-    } 
-    ::-webkit-scrollbar-thumb:vertical {
-        background: grey url(../images/scrollbar_thumb_bg.png) no-repeat center;
-    }
-    html {
-        overflow-y:scroll;
-    }
+html {
+    overflow-y:scroll;
 }
 button {
     cursor: url('../images/cursor.png'), default;
