--- a/css/browser.DT.css
+++ b/css/browser.DT.css
@@ -173,3 +173,16 @@ img{
 body {
 	background-color: black;
 }
+td.details-control {
+    background: url('../images/details_open.png') no-repeat center center;
+    cursor: pointer;
+}
+tr.shown td.details-control {
+    background: url('../images/details_close.png') no-repeat center center;
+}
+#leftside{
+float: left;
+}
+#rightside{
+
+}
