Join works corrected via keyboard
No hacky bullshit... this time.

--- a/css/browser.DT.css
+++ b/css/browser.DT.css
@@ -176,6 +176,7 @@ body {
 td.details-control {
     background: url('../images/details_open.png') no-repeat center center;
     cursor: pointer;
+	background-color: black !important;
 }
 tr.shown td.details-control {
     background: url('../images/details_close.png') no-repeat center center;
