Add player table to expansion line
Still needs some prettying up, but the functionality is all there now.

--- a/css/browser.DT.css
+++ b/css/browser.DT.css
@@ -183,6 +183,18 @@ tr.shown td.details-control {
 #leftside{
 float: left;
 }
+#center{
+float: left;
+margin-left: 10;
+margin-right: 10;
+}
 #rightside{
-
+float: left;
+}
+.statLines{
+ font-size: 10pt;   
+}
+.tableHeader{
+ font-size: 10pt;
+padding: 0; 
 }
