--- a/css/browser.css
+++ b/css/browser.css
@@ -4,71 +4,16 @@
     min-width: 100%;
     min-height: 100%;
 }
-#overlay {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(37,37,37,0.6);
-    border: 5px solid #1a3d5a;
-}
-#serverlist {
-    position: absolute;
-    top: 30px;
-    bottom: 0;
-    left: 8px;
-    right: 0px;
-    width: 84%;
-    word-wrap: break-word;
-}
-#serverinfo {
-    position: absolute;
-    top: 15px;
-    bottom: 0;
-    right: 15;
-    width: 26.5%;
-}
-.gameCard{
-    opacity: 0.8;
-    margin-top: 45px;
-    padding: 15;
-    margin-right: 0;
-    padding-bottom: 30;
-    color: white;
-    background-color: black;
-    border-style: solid;
-    border: 3px solid #1a3d5a;
-}
-.gameCard img{
-    padding-bottom: 10;
-    margin-left: auto;
-    margin-right: auto;
-}
-.gameCard ul{
-    list-style-type: none;
-    padding-left:0;
-    font-size: 1.17em;
-    margin: 0;
-}
-.gamecard h3{
-    margin:0;
-    word-wrap: break-word;
-}
-.serverTable{
-    opacity: 0.8;
-    padding: 5;
-    color: white;
-    background: black;
-}
 .browserTitle{
     color: white;
     opacity: 0.8;
     position: absolute;
-    top: -2px;
+    top: -5px;
     left: 80;
 }
 #logo{
     position: absolute;
-    top: 10;
+    top: 8;
     left: 15;
     opacity: 0.8;
     width: 50px;
@@ -77,7 +22,7 @@
 .refresh {
     opacity: 0.8;
     position: absolute;
-    top: 16;
+    top: 13;
     left: 375;
     color: white;
     font-weight: bold;
@@ -86,14 +31,23 @@
     height: 30px;
     border-style: solid;
     border: 1px solid white;
+	z-index:1000;
 }
 .refresh:hover{
     background-color: #1a3d5a;
 }
+.serverStats {
+    color: white;
+	font-weight: bold;
+    opacity: 0.8;
+    position: absolute;
+    top: 10;
+    left: 515;
+}
 .closeButton {
     opacity: 0.8;
     position: absolute;
-    top: 16;
+    top: 13;
     right: 10;
     color: white;
     font-weight: bold;
@@ -107,25 +61,74 @@
 .closeButton:hover{
     background-color: #1a3d5a;
 }
-.serverStats {
-    color: white;
-	font-weight: bold;
+
+#serverTable_wrapper{
     opacity: 0.8;
-    position: absolute;
-    top: 12;
-    left: 515;
+    top: 55;
+    padding-top: 0;
 }
-.statBreakdown{
-    margin-top: 10;
-    background: black;
-    color:white;
+#serverTable tbody tr td{
+    background-color: black;
+    color: white;
 }
-.statLines{
-    border-style: solid;
-    border-bottom: 0;
-    border-top: 1px solid white;
-    border-left: 0;
-    border-right: 0;
+#serverTable tbody tr.selected td{
+    background-color: white;
+    color: black;
+}
+#serverTable thead tr th.sorting_asc, thead tr th.sorting_desc {
+    background-color: white;
+    color: black;
+}
+#serverTable thead tr th.sorting:hover{
+    background-color: #545454;
+    color: white;
+}
+#serverTable thead tr th.sorting{
+    background-color: #1a3d5a;
+    color: white;
+}
+#serverTable tbody tr td.sorting_1{
+    background-color: #1a3d5a;
+    color: white;
+}
+#serverTable tbody tr:hover td{
+    background-color: #1a3d5a;
+	color: white;
+    cursor: pointer;
+}
+
+#serverTable_filter{
+    opacity: 0.8;
+    position: fixed;
+    top: 15;
+    right: 10;
+}
+#serverTable_filter label{
+    color: white;
+}
+#serverTable_filter input{
+    color: black;
+}
+#serverTable_length{
+    opacity: 0.8;
+    position: fixed;
+    bottom: 10; 
+    left: 5;    
+}
+#serverTable_length label{
+    color: white;
+}
+#serverTable_length select{
+    color: black;
+}
+#serverTable_paginate{
+    opacity: 0.8;
+    position: fixed;
+    bottom: 10; 
+    right: 5;
+}
+#serverTable_paginate label{
+    color: white;
 }
 #connectionStatus{
 	opacity: 0.8;
@@ -146,36 +149,8 @@
 #setBrowser:a{
     font-weight: normal;
 }
-body{
-    cursor: url('../images/cursor.png'), default;
-}
-a {
-    color: white !important;
-    cursor: url('../images/cursor.png'), default;
-}
-.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
-    background-color: #1a3d5a;
-}
-.tableHeader{
-    background-color: #1a3d5a;
-}
-.heading {
-    color: grey; 
-}
-.version {
-    float: right;
-}
 img{
     -webkit-user-drag: none;
-}
-html {
-    overflow-y:scroll;
-}
-button {
-    cursor: url('../images/cursor.png'), default;
-}
-.selected{
-    background-color: #1a3d5a;
 }
 .selected .controllerButton{
     opacity: 1;
@@ -193,4 +168,47 @@ button {
     height: 28;
     width: 28;
     display: none;
+}
+body {
+	background-color: black;
+}
+td.details-control {
+    background: url('../images/details_open.png') no-repeat center center;
+    cursor: pointer;
+	background-color: black !important;
+}
+tr.shown td.details-control {
+    background: url('../images/details_close.png') no-repeat center center;
+}
+#leftside{
+    float: left;
+    width: 40%;
+}
+#rightside{
+    float: left;
+    margin-left: 10;
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 58%;
+}
+.statLines{
+    font-size: 10pt;
+}
+.tableHeader{
+    font-size: 10pt;
+    padding: 0; 
+}
+.statBreakdown{
+    width: 100%;
+}
+#mapPic{
+    width: 75%;
+}
+#gameName{
+    color: #545454;
+    font-weight: bold;
+}
+#hostName{
+
 }
