--- a/css/browser.css
+++ b/css/browser.css
@@ -3,6 +3,7 @@
     /* Preserve aspect ratio */
     min-width: 100%;
     min-height: 100%;
+	z-index: -1;
 }
 .browserTitle{
     color: white;
@@ -125,16 +126,25 @@
 #serverTable_paginate{
     opacity: 0.8;
     position: fixed;
-    bottom: 10; 
+    bottom: 5; 
     right: 5;
     background-color: black;
+	z-index: 2;
 }
 #serverTable_paginate label{
     color: white !important;
 }
 #serverTable_info{
+	position: fixed;
+	bottom: 13;
+	font-weight: bold;
+	left: 40%;
     color: white;
-    opacity: 0.8;    
+    opacity: 0.8;
+}
+#serverTable{
+	padding-bottom: 60;
+	border-bottom: 0;
 }
 #connectionStatus{
 	opacity: 0.8;
@@ -143,17 +153,6 @@
 	padding-right: 8;
 	padding-bottom: 7;
     color: white;
-}
-#setBrowser{
-	opacity: 0.8;
-	position:fixed; bottom:17; right: 0;
-	z-index:1000;
-	padding-right: 8;
-	padding-bottom: 6;
-    display: none;
-}
-#setBrowser:a{
-    font-weight: normal;
 }
 img{
     -webkit-user-drag: none;
@@ -245,4 +244,14 @@ tr.shown td.details-control {
 }
 #hostName{
 	font-weight: bold;
+}
+#pageFooter{
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+	height: 50;
+    background-color: #545454;
+	z-index: 0;
+	opacity: 0.8;
+	border: 1px solid black;
 }
