--- a/css/browser.css
+++ b/css/browser.css
@@ -115,7 +115,8 @@
     opacity: 0.8;
     position: fixed;
     bottom: 10; 
-    left: 5;
+    left: 15;
+	z-index: 1;
 }
 #serverTable_length label{
     color: white;
@@ -127,20 +128,27 @@
     opacity: 0.8;
     position: fixed;
     bottom: 5; 
-    right: 5;
+    right: 15;
     background-color: black;
-	z-index: 2;
+	z-index: 1;
 }
 #serverTable_paginate label{
     color: white !important;
 }
 #serverTable_info{
 	position: fixed;
-	bottom: 13;
 	font-weight: bold;
-	left: 40%;
     color: white;
-    opacity: 0.8;
+    background-color: #545454;
+	padding-top: 15;
+	padding-left: 40%;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 50;
+	opacity: 0.8;
+	border: 1px solid black;
+	z-index: 0;
 }
 #serverTable{
 	padding-bottom: 60;
@@ -244,14 +252,4 @@ tr.shown td.details-control {
 }
 #hostName{
 	font-weight: bold;
-}
-#pageFooter{
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	height: 50;
-    background-color: #545454;
-	z-index: 0;
-	opacity: 0.8;
-	border: 1px solid black;
 }
