--- a/css/browser.css
+++ b/css/browser.css
@@ -194,11 +194,11 @@ tr.shown td.details-control {
     background: url('../images/details_close.png') no-repeat center center;
 }
 #leftside{
-    margin-left: 20;
+    margin-left: 3%;
 	padding: 10;
 	padding-right: 0;
     float: left;
-    width: 35%;
+    width: 34%;
 	background-color: white;
 	color: black;
 	max-height: 264px;
@@ -213,8 +213,8 @@ tr.shown td.details-control {
     height: 264px;
     overflow-y: auto;
     overflow-x: hidden;
-    width: 60%;
-	margin-right: 20;
+    width: 59%;
+	margin-right: 3%;
 }
 .private{
 	background-color: black !important;
